--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,8 @@ android {
         versionName "1.0"
     }
 
+    dataBinding.enabled = true
+
     buildTypes {
         release {
             minifyEnabled false
@@ -24,5 +26,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-    // TODO (1) Enable Data Binding in your application
+    // COMPLETED (1) Enable Data Binding in your application
 }
